--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -14,7 +14,7 @@
 * in flow control, loops, and collections. By mastering these concepts, developers will be able to write more
 * efficient and effective code in their Salesforce projects.
 *
-* @author Your Name
+* @author Lakshmi Venkat
 */
 
 public with sharing class FlowControlLoopsCollections {
@@ -29,7 +29,16 @@ public with sharing class FlowControlLoopsCollections {
      * @return "Hello World!" if x greater than y, otherwise return null.
      */
     public static String helloWorld(Integer x, Integer y) {
-        return null; // Replace null with the variable you used to store the result
+        
+        if(x<y && x!=null && y!=null){
+            String output = 'Hello World';
+            system.debug('if the above conditions are not satisfied' + output);
+            return output;
+        }else{
+            system.debug('If x<y and x= null and y=null please return null');
+            return null;
+        }
+        // Replace null with the variable you used to store the result
     }
 
     /**
