--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -73,8 +73,14 @@ public with sharing class FlowControlLoopsCollections {
     public static Integer findMax(Integer num1, Integer num2) {
         // Initialize largestNum as null
         Integer largestNum = null;
-
-        return null; // Replace null with the variable you used to store the result
+        if(num1!=null && num2!=null){
+            if(num1>num2){
+                return num1;
+            }else{
+                return num2;
+            }
+        }
+        return largestNum; // Replace null with the variable you used to store the result
     }
 
 
