--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -165,10 +165,18 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static String determineGrade(Integer score) {
         String grade;
-        if(score==90){
-            return grade = 'A';
-        }else
-        return null; // Replace null with the variable you used to store the result
+        if(score>=90){
+             grade = 'A';
+        }else if(score>=80){
+             grade = 'B';
+        }else if(score>=70){
+             grade = 'C';
+        }else if(score>=60){
+             grade = 'D';
+        }else{
+             grade = 'F';
+        }
+        return grade; // Replace null with the variable you used to store the result
     }
 
 
